src/test/deca/avecObjet/valid/class_selection_unitaire.deca
// Description :
//    Test unitaire : Selection.
//
// Resultats :
//    a.x = 42

class A {
    int x;
}

{
    A a = new A();       
    a.x = 42;            
    println("a.x = ", a.x);
}
