src/test/deca/avecObjet/invalid/heap_overflow.deca
// Description :
//    Allocation infinie pour saturer le tas.
//
// Resultats :
//    Erreur : allocation impossible, tas plein

class A {
    int x = 1;
    int y = 2;
}

{
    A a;
    while (true) {
        a = new A();
    }
}